--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,9 @@ button:focus-visible {
 }
 
 .description {
+  overflow-y: auto;
+  max-height: 350px;
+  min-height: 350px;
   border: none;
   border-radius: 3pt;
   outline-style: solid;
