--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,6 @@
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -50,4 +48,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media only screen and (min-width: 1300px) {
+  .user-list {
+    min-width: 500px;
+  }
 }
