--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,3 +55,12 @@ button:focus-visible {
     min-width: 500px;
   }
 }
+
+.mdxeditor-popup-container {
+  z-index: 9999;
+}
+
+.md-editor-contenteditable {
+  overflow-y: auto;
+  height: 330px;
+}
